syntax = "proto3";

package PRO;

//option optimize_for = LITE_RUNTIME;
option go_package = "gamelib/protobuf/gpro";
option csharp_namespace = "com.cms.client.network.gpro";
option java_multiple_files = true;
option java_package = "com.cms.client.network.gpro";

enum ChatChannelType{
  ChatChannelT_Init = 0;
  //全局广播
  ChatChannelT_Global = 1;
  //频道聊天
  ChatChannelT_Channel = 2;
  //工会聊天
  ChatChannelT_Union = 3;
  //user to user
  ChatChannelT_Single = 4;
  //自定义聊天
  ChatChannelT_Custom = 5;
  
  ChatChannelT_Max = 6;
}

message ChatMessageItem{
  //发送人 20+64 = 84
  int64 send_user_iid =1;
  string send_nickname = 2;
  //发送时间秒
  int32 send_time = 3;
  //max len 216
  string msg_content = 5;
}

message ChatMessageItems {
  repeated ChatMessageItem msgs = 1;
}

message ChatChannelInfo{
  ChatChannelType type = 1;
  int64 channeldid = 2;
}

message Chat_GlobalMsg_ntf{
  //max 50 msgs
  ChatMessageItems msgs = 1;
}

message Chat_UserChannels_active{
  repeated ChatChannelInfo channels = 1;
}

message Chat_CustomChannelId_req{
}

message Chat_CustomChannelId_ack{
  //0:success 1:failed
  int32 result = 1;
  optional ChatChannelInfo channel = 2;
}

message Chat_UserMsg_say{
  ChatChannelInfo channel = 1;
  string nickname = 2;
  //max len 216
  string msg_content = 3;
}

message Chat_ChatMsg_ntf{
  ChatChannelInfo channel = 1;
  ChatMessageItems msgs = 2;
}
